--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
-  "homepage": "https://killer-abhi.github.io/Portfolio",
+  "homepage": "https://github.com/CarlJohnBulacan/carl-portfolio.git",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
