--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
-  "homepage": "https://carl-portfolio1.onrender.com/t",
+  "homepage": "https://carl-portfolio1.onrender.com",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
